# 00s-engine

./: CMakeLists.txt  README.md  camera.cpp  camera.h  composite_entity.cpp  composite_entity.h  config.h  controls.cpp  controls.h  cube.cpp  cube.h  device.cpp  device.h  drawable.h  entity.cpp  entity.h  fs.frag  geometry.h  input.cpp  input.h  key.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_cube.cpp  mesh_cube.h  mesh_data.h  mesh_line.cpp  mesh_line.h  mesh_model.cpp  mesh_model.h  mesh_quad.cpp  mesh_quad.h  mesh_triangle.cpp  mesh_triangle.h  model_instance.h  (+24 more)
math/: CMakeLists.txt  normal_generator.cpp
mesh/: CMakeLists.txt  mesh_cube.cpp  mesh_line.cpp  mesh_model.cpp  mesh_quad.cpp  mesh_terrain.cpp  mesh_terrain.h  mesh_triangle.cpp  renderable_mesh.cpp
shaders/: fs_color.frag  fs_diffuse.frag  fs_normals.frag  fs_terrain.frag  fs_texture.frag  gs_normals.geom  vs_color.vert  vs_diffuse.vert  vs_normals.vert  vs_terrain.vert  vs_texture.vert
util/: CMakeCache.txt  CMakeLists.txt  Makefile  array2d.cpp  array2d.h  cmake_install.cmake  file_io.h  utility.cpp  utility.h
